# grpc_iface_demo

./: CMakeLists.txt  generate.bat  main.cpp  main_client.cpp  main_server.cpp
grpc/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  service.proto
